--- a/index.html
+++ b/index.html
@@ -21,252 +21,42 @@
     <header class="site-header toggle-nav sticky">
         <div class="container">
             <div class="site-id">
-                <h1><a href="index.html">Base Site</a> | Single Page Site</h1>
+                <a href="index.html"><img src="img/kawaiichibi75.gif" alt="logo"></a>
             </div>
             <nav class="site-nav" data-navstate="closed">
                 <h2 class="menu-button">
-                  <svg viewBox="0 0 40 25" width="40" height="25">
-                    <rect id="line1" y="0" width="40" height="3"></rect>
-                    <rect id="line2" y="10" width="40" height="3"></rect>
-                    <rect id="line3" x="10" y="20" width="30" height="3"></rect>
-                  </svg>
-                  <span class="hide-visually">Menu</span>
+                    <svg viewBox="0 0 40 25" width="40" height="25">
+                        <rect id="line1" y="0" width="40" height="3"></rect>
+                        <rect id="line2" y="10" width="40" height="3"></rect>
+                        <rect id="line3" x="10" y="20" width="30" height="3"></rect>
+                    </svg>
+                    <span class="hide-visually">Menu</span>
                 </h2>
                 <ul class="primary-nav">
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">About</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
                 </ul>
-              </nav>
+            </nav>
         </div>
     </header>
     <main class="site-main" id="home">
         <section class="hero">
             <div class="container">
-            <svg viewBox="0 0 569.91 145.94">
-                <path class="cls-1" d="M17.79,136.12c-4.42-2.85-2.95-9.61-.78-14.4A201.24,201.24,0,0,1,87.84,38.09c6.06-4.07,14.5-7.71,20.11-3,5.11,4.25,4,12.26,2.26,18.69A668.3,668.3,0,0,1,84,132.32c-5.61,13.9-11.78,29.16-7.1,43.4,9.93-3.88,16.84-12.81,23.12-21.42q24.15-33.11,45.88-67.89c-11.07,13-15.78,34.77-3.05,46.2,8.4,7.54,21.56,7.54,31.88,3s18.44-12.86,26.24-21c4.14-4.33,7.29-13.1,1.53-14.74-2.81-.8-5.58,1.3-7.6,3.43A51.45,51.45,0,0,0,181.17,142c.34,4.53,1.54,9.41,5.16,12.14,6,4.53,14.61.66,20.53-4,19-14.86,32.39-37.43,54.58-46.94,3.33-1.43,7.78-2.28,10.09.51,1.78,2.13,1.29,5.27.71,8l-9.55,44.53a147,147,0,0,1,35.24-40.74l1.83,28.81c.27,4.21.79,8.94,4.1,11.56,5.53,4.39,13.47-.52,18.47-5.51a199.14,199.14,0,0,0,31.24-40.45,87.73,87.73,0,0,0-6.66,33.92c0,5.27,2.38,12.23,7.62,11.71a9.31,9.31,0,0,0,4.75-2.41c19.09-15.27,31.48-41.38,55.45-46.16-10.32,6.3-22,15.22-20.78,27.25.93,8.93,9.59,15.72,18.52,16.65s17.79-3,25-8.35a62,62,0,0,0,22.86-34.93C449,107.3,439.82,119,440.59,130.28s9.54,20.84,20,25.17,22.18,4.15,33.32,2.38c26.55-4.23,51.5-17.32,70.6-36.24,12.84-12.72,23.61-30.45,19.47-48-3.74-15.86-18.55-26.69-33.62-32.89C530.55,32.56,508.92,30,487.57,29.79c-43.78-.36-91.93,12.09-116.19,48.53a55.6,55.6,0,0,0-17.45-12.63,59.88,59.88,0,0,0,17.61,23.88A28.29,28.29,0,0,1,388,80.1" transform="translate(-14.92 -29.78)" />
-            </svg>
+                <svg viewBox="0 0 569.91 145.94">
+                    <path class="cls-1"
+                        d="M17.79,136.12c-4.42-2.85-2.95-9.61-.78-14.4A201.24,201.24,0,0,1,87.84,38.09c6.06-4.07,14.5-7.71,20.11-3,5.11,4.25,4,12.26,2.26,18.69A668.3,668.3,0,0,1,84,132.32c-5.61,13.9-11.78,29.16-7.1,43.4,9.93-3.88,16.84-12.81,23.12-21.42q24.15-33.11,45.88-67.89c-11.07,13-15.78,34.77-3.05,46.2,8.4,7.54,21.56,7.54,31.88,3s18.44-12.86,26.24-21c4.14-4.33,7.29-13.1,1.53-14.74-2.81-.8-5.58,1.3-7.6,3.43A51.45,51.45,0,0,0,181.17,142c.34,4.53,1.54,9.41,5.16,12.14,6,4.53,14.61.66,20.53-4,19-14.86,32.39-37.43,54.58-46.94,3.33-1.43,7.78-2.28,10.09.51,1.78,2.13,1.29,5.27.71,8l-9.55,44.53a147,147,0,0,1,35.24-40.74l1.83,28.81c.27,4.21.79,8.94,4.1,11.56,5.53,4.39,13.47-.52,18.47-5.51a199.14,199.14,0,0,0,31.24-40.45,87.73,87.73,0,0,0-6.66,33.92c0,5.27,2.38,12.23,7.62,11.71a9.31,9.31,0,0,0,4.75-2.41c19.09-15.27,31.48-41.38,55.45-46.16-10.32,6.3-22,15.22-20.78,27.25.93,8.93,9.59,15.72,18.52,16.65s17.79-3,25-8.35a62,62,0,0,0,22.86-34.93C449,107.3,439.82,119,440.59,130.28s9.54,20.84,20,25.17,22.18,4.15,33.32,2.38c26.55-4.23,51.5-17.32,70.6-36.24,12.84-12.72,23.61-30.45,19.47-48-3.74-15.86-18.55-26.69-33.62-32.89C530.55,32.56,508.92,30,487.57,29.79c-43.78-.36-91.93,12.09-116.19,48.53a55.6,55.6,0,0,0-17.45-12.63,59.88,59.88,0,0,0,17.61,23.88A28.29,28.29,0,0,1,388,80.1"
+                        transform="translate(-14.92 -29.78)" />
+                </svg>
+                <h1>Ma Venice Bagolor </h1>
+                <h2>Designer</h2>
             </div>
         </section>
-        <div class="container">
-            <section>
-                <div class="row">
-                    <div class="column one-third">
-                        <img src="img/placeholder.gif" alt="placeholder img">
-                        <h3>Our company</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur veniam similique suscipit
-                            porro laborum officiis?!</p>
-                        <a href="about.html" class="button">Meet the team</a>
-                    </div>
-                    <div class="column one-third"><img src="img/placeholder.gif" alt="placeholder img">
-                        <h3>heading 3</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus nihil esse distinctio,
-                            dolores neque quibusdam reprehenderit sapiente laboriosam saepe animi!</p>
-                        <a href="#" class="button">button</a>
-                    </div>
-                    <div class="column one-third">
-                        <img src="img/placeholder.gif" alt="placeholder img">
-                        <h3>Contact Us</h3>
-                        <p>We love to hear from you.</p>
-                        <a href="contact.html" class="button">get in touch.</a>
-                    </div>
-                </div>
-        </div>
-        </section>
-        <section id="about">
-            <article>
-                <div class="container">
-                    <h2 class="sectionhead">About Us</h2>
-                    <h1 class="headline">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h1>
-
-                    <h2 class="subheadline">
-                        Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-                        posuere cubilia Curae; Vestibulum ultrices augue vitae purus sodales
-                        eleifend.
-                    </h2>
-
-                    <p class="date">Date MM/DD/YYYY</p>
-
-                    <p>
-                        Sed faucibus egestas ultricies. Vivamus enim auctor hendrerit elit.
-                        Morbi facilisis tempus orci, sed placerat metus auctor non. Etiam
-                        non lacus erat, sit amet porttitor tellus. Curabitur pretium
-                        tincidunt tortor in vulputate. Vestibulum ante ipsum primis in
-                        faucibus orci luctus et ultrices posuere cubilia Curae; Morbi quam
-                        eros, bibendum ut pellentesque id, tristique eget lacus. Ut
-                        fermentum ligula vitae est luctus at iaculis nunc placerat.
-                    </p>
-
-                    <p>
-                        Vestibulum urna erat, viverra in dignissim quis, bibendum lobortis
-                        sapien. Integer porttitor magna ut orci aliquam sed suscipit eros
-                        adipiscing. Pellentesque feugiat mi id eros placerat sit amet
-                        hendrerit tortor ultricies. Praesent pellentesque lorem eget ligula
-                        egestas sit amet elementum lacus dignissim. Duis semper sapien id
-                        massa vehicula quis malesuada est molestie. Vestibulum ac nunc in
-                        metus egestas sodales. In dignissim luctus eros, non facilisis nisi
-                        vulputate vulputate. Cras bibendum venenatis ipsum, sed euismod quam
-                        rhoncus rhoncus. Nullam consectetur augue ac mi convallis nec tempor
-                        odio pellentesque.
-                    </p>
-
-                    <h5>Nam ut metus sit amet odio tincidunt tincidunt vitae a orci.</h5>
-
-                    <p>
-                        Maecenas at urna sapien, in lobortis tellus. Morbi eget felis eget
-                        tellus dapibus pellentesque. Duis dapibus pulvinar ipsum eu dapibus.
-                        Suspendisse potenti. Etiam sollicitudin velit eget nisi vulputate eu
-                        semper quam semper. Sed vitae ipsum quam. Nunc sed purus nisl, sit
-                        amet luctus nisi. Ut enim massa, sagittis et commodo eget.
-                    </p>
-
-                    <blockquote>
-                        Pellentesque rutrum, nunc sit amet adipiscing tempor, erat leo
-                        laoreet est, eu rhoncus risus elit quis lectus. Cras nulla tellus,
-                        sollicitudin quis commodo eget, commodo vel sapien.
-                    </blockquote>
-
-                    <p>
-                        Auctor pretium elit. Nunc enim urna, accumsan sed ullamcorper eu,
-                        scelerisque gravida sapien. Phasellus tincidunt nunc elementum
-                        turpis ornare sit amet congue diam sodales. Sed interdum neque ut
-                        ipsum vestibulum euismod. Nulla nec purus ante. Praesent non diam et
-                        leo volutpat dictum in id erat. Donec elementum, leo ac blandit
-                        ornare, nunc nunc tincidunt mauris, sed ultricies lorem nibh quis
-                        lorem.
-                    </p>
-
-                    <p>
-                        Morbi mauris mauris, aliquam eu sollicitudin id, sollicitudin sed
-                        nisl. Cras et nunc a leo pulvinar tincidunt. Suspendisse dignissim,
-                        sem sit amet consequat varius, eros enim ullamcorper eros, at
-                        tincidunt lacus dolor in turpis. Proin tempus ultricies mauris. Sed
-                        eu tortor nisi. Pellentesque non nisi justo, vel suscipit orci.
-                        Integer dolor metus, scelerisque aliquet sollicitudin sit amet,
-                        posuere at mauris. Nunc sem tellus, consequat at pulvinar quis,
-                        fringilla vel libero. Integer faucibus fermentum eros.
-                    </p>
-
-                    <h5>Proin non ipsum ligula, ornare semper purus.</h5>
-
-                    <p>
-                        Morbi tincidunt ligula sit amet nulla venenatis sit amet tristique
-                        nisl pretium. Nunc facilisis, orci et gravida blandit, lectus augue
-                        viverra augue, non tempus ligula leo nec arcu. Cum sociis natoque
-                        penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-                        Nullam eu elit quis sem posuere sagittis. Class aptent taciti
-                        sociosqu ad litora torquent per conubia nostra, per inceptos
-                        himenaeos. Mauris congue dolor a magna accumsan eu pharetra mi
-                        porta. Cras eget interdum velit.
-                    </p>
-
-                    <p>
-                        Aenean id nulla in dui iaculis adipiscing. Quisque commodo odio ut
-                        lacus auctor pellentesque. Pellentesque egestas pellentesque lorem
-                        sed imperdiet. Etiam porta egestas lectus eget interdum.
-                        Pellentesque purus neque, elementum non lobortis quis, vulputate ac
-                        metus. Etiam et purus a justo accumsan consequat eu elementum
-                        ligula. Nullam blandit pretium augue, vitae suscipit mauris lobortis
-                        sed. Nam iaculis sem at elit placerat sollicitudin. Ut quis pulvinar
-                        leo.
-                    </p>
-
-                    <h5>Nam ut metus sit amet odio tincidunt tincidunt vitae a orci.</h5>
-
-                    <p>
-                        Maecenas at urna sapien, in lobortis tellus. Morbi eget felis eget
-                        tellus dapibus pellentesque. Duis dapibus pulvinar ipsum eu dapibus.
-                        Suspendisse potenti. Etiam sollicitudin velit eget nisi vulputate eu
-                        semper quam semper. Sed vitae ipsum quam. Nunc sed purus nisl, sit
-                        amet luctus nisi. Ut enim massa, sagittis et commodo eget.
-                    </p>
-
-                    <p>
-                        Auctor pretium elit. Nunc enim urna, accumsan sed ullamcorper eu,
-                        scelerisque gravida sapien. Phasellus tincidunt nunc elementum
-                        turpis ornare sit amet congue diam sodales. Sed interdum neque ut
-                        ipsum vestibulum euismod. Nulla nec purus ante. Praesent non diam et
-                        leo volutpat dictum in id erat. Donec elementum, leo ac blandit
-                        ornare, nunc nunc tincidunt mauris, sed ultricies lorem nibh quis
-                        lorem.
-                    </p>
-
-                    <p>
-                        Morbi mauris mauris, aliquam eu sollicitudin id, sollicitudin sed
-                        nisl. Cras et nunc a leo pulvinar tincidunt. Suspendisse dignissim,
-                        sem sit amet consequat varius, eros enim ullamcorper eros, at
-                        tincidunt lacus dolor in turpis. Proin tempus ultricies mauris. Sed
-                        eu tortor nisi. Pellentesque non nisi justo, vel suscipit orci.
-                        Integer dolor metus, scelerisque aliquet sollicitudin sit amet,
-                        posuere at mauris. Nunc sem tellus, consequat at pulvinar quis,
-                        fringilla vel libero. Integer faucibus fermentum eros.
-                    </p>
-
-                    <h5>
-                        Aenean tristique odio et dui scelerisque scelerisque porta od.
-                    </h5>
-
-                    <p>
-                        Proin non ipsum ligula, ornare semper purus. Morbi tincidunt ligula
-                        sit amet nulla venenatis sit amet tristique nisl pretium. Nunc
-                        facilisis, orci et gravida blandit, lectus augue viverra augue, non
-                        tempus ligula leo nec arcu. Cum sociis natoque penatibus et magnis
-                        dis parturient montes, nascetur ridiculus mus. Nullam eu elit quis
-                        sem posuere sagittis. Class aptent taciti sociosqu ad litora
-                        torquent per conubia nostra, per inceptos himenaeos. Mauris congue
-                        dolor a magna accumsan eu pharetra mi porta. Cras eget interdum
-                        velit.
-                    </p>
-
-                    <p>
-                        Aenean id nulla in dui iaculis adipiscing. Quisque commodo odio ut
-                        lacus auctor pellentesque. Pellentesque egestas pellentesque lorem
-                        sed imperdiet. Etiam porta egestas lectus eget interdum.
-                        Pellentesque purus neque, elementum non lobortis quis, vulputate ac
-                        metus. Etiam et purus a justo accumsan consequat eu elementum
-                        ligula. Nullam blandit pretium augue, vitae suscipit mauris lobortis
-                        sed. Nam iaculis sem at elit placerat sollicitudin. Ut quis pulvinar
-                        leo.
-                    </p>
-                </div>
-            </article>
-        </section>
-        <section id="contactinfo">
+        <section class="thumbgrid">
             <div class="container">
-                <h2 class="sectionhead">Contact Us</h2>
-                <section id="map">
-                    <div class="container">
-                        <img src="https://placehold.it/1600x400" alt="map">
-                    </div>
-                </section>
-                <h3>Ways to get in touch</h3>
-                <div class="row">
-                    <div class="column one-half">
-                        <address>
-                            4303 Diamond Head Rd<br />
-                            Honolulu, Hawaii <br />
-                            96816
-                        </address>
-                        <a href="tel:808-123-4567">808.123.4567</a>
-                    </div>
-                    <div class="column one-half">
-                        <form>
-
-                            <label for="name">Your Name</label>
-                            <input type="text" id="yourname" name="yourname" />
-
-                            <label for="youremail">Your Email</label>
-                            <input type="text" id="youremail" name="youremail" />
-
-                            <label for="yourmessage">Your Message</label>
-                            <input type="text" id="youremail" name="youremail" />
-
-                            <input type="submit" value="Submit" class="button" />
-
-                        </form>
-                    </div>
-                </div>
+                <div class="row"></div>
             </div>
         </section>
+
     </main>
     <footer class="site-footer">
         <nav class="site-nav">
