--- a/index.html
+++ b/index.html
@@ -51,9 +51,51 @@
                 <h2>Designer</h2>
             </div>
         </section>
-        <section class="thumbgrid">
+        <section id="work" class="text-centered">
             <div class="container">
-                <div class="row"></div>
+                <ul class="thumbgrid hovercaps">
+                    <li>
+                        <a href="#">
+                            <img src="#" alt="placeholder" />
+                            <div class="caption blue">
+                                <h3>Title of Project</h3>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="#" alt="placeholder" />
+                            <div class="caption blue">
+                                <h3>Title of Project</h3>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="#" alt="placeholder" />
+                            <div class="caption blue">
+                                <h3>Title of Project</h3>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="#" alt="placeholder" />
+                            <div class="caption blue">
+                                <h3>Title of Project</h3>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="#" alt="placeholder" />
+                            <div class="caption blue">
+                                <h3>Title of Project</h3>
+                            </div>
+                        </a>
+                    </li>
+
+                </ul>
             </div>
         </section>
 
