--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <ul class="thumbgrid hovercaps">
                     <li>
                         <a href="#">
-                            <img src="#" alt="placeholder" />
+                            <img src="https://via.placeholder.com/500x500" alt="placeholder" />
                             <div class="caption blue">
                                 <h3>Title of Project</h3>
                             </div>
@@ -64,7 +64,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="#" alt="placeholder" />
+                            <img src="https://via.placeholder.com/500x500" alt="placeholder" />
                             <div class="caption blue">
                                 <h3>Title of Project</h3>
                             </div>
@@ -72,7 +72,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="#" alt="placeholder" />
+                            <img src="https://via.placeholder.com/500x500" alt="placeholder" />
                             <div class="caption blue">
                                 <h3>Title of Project</h3>
                             </div>
@@ -80,7 +80,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="#" alt="placeholder" />
+                            <img src="https://via.placeholder.com/500x500" alt="placeholder" />
                             <div class="caption blue">
                                 <h3>Title of Project</h3>
                             </div>
@@ -88,7 +88,15 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="#" alt="placeholder" />
+                            <img src="https://via.placeholder.com/500x500" alt="placeholder" />
+                            <div class="caption blue">
+                                <h3>Title of Project</h3>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="https://via.placeholder.com/500x500" alt="placeholder" />
                             <div class="caption blue">
                                 <h3>Title of Project</h3>
                             </div>
