--- a/index.html
+++ b/index.html
@@ -102,6 +102,30 @@
                             </div>
                         </a>
                     </li>
+                    <li>
+                        <a href="#">
+                            <img src="https://via.placeholder.com/500x500" alt="placeholder" />
+                            <div class="caption blue">
+                                <h3>Title of Project</h3>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="https://via.placeholder.com/500x500" alt="placeholder" />
+                            <div class="caption blue">
+                                <h3>Title of Project</h3>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="https://via.placeholder.com/500x500" alt="placeholder" />
+                            <div class="caption blue">
+                                <h3>Title of Project</h3>
+                            </div>
+                        </a>
+                    </li>
 
                 </ul>
             </div>
