--- a/index.html
+++ b/index.html
@@ -56,7 +56,39 @@
                 <ul class="thumbgrid hovercaps">
                     <li>
                         <a href="#">
-                            <img src="https://via.placeholder.com/500x500" alt="placeholder" />
+                            <img src="img/stamp/amethyst-front-cover.gif" alt="placeholder" />
+                            <div class="caption blue">
+                                <h3>Stamps</h3>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="img/MaVenice_LuLa2020/chocolate-box.gif" alt="placeholder" />
+                            <div class="caption blue">
+                                <h3>Lulu Chocolate </h3>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="img/roto/rotoofme.jpg" alt="placeholder" />
+                            <div class="caption blue">
+                                <h3>Roto</h3>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="img/santorini/santorini.png" alt="placeholder" />
+                            <div class="caption blue">
+                                <h3>Santorini</h3>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="img/booktrilogy/trilogybookcover-1600X1600.gif" alt="placeholder" />
                             <div class="caption blue">
                                 <h3>Title of Project</h3>
                             </div>
@@ -64,7 +96,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="https://via.placeholder.com/500x500" alt="placeholder" />
+                            <img src="img/brochure/brochure-cover.gif" alt="placeholder" />
                             <div class="caption blue">
                                 <h3>Title of Project</h3>
                             </div>
@@ -72,7 +104,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="https://via.placeholder.com/500x500" alt="placeholder" />
+                            <img src="img/freshcatch/freshcatchcover-1600x1600.gif" alt="placeholder" />
                             <div class="caption blue">
                                 <h3>Title of Project</h3>
                             </div>
@@ -80,7 +112,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="https://via.placeholder.com/500x500" alt="placeholder" />
+                            <img src="img/kawaiikon/kawaiikoncover-gif.gif" alt="placeholder" />
                             <div class="caption blue">
                                 <h3>Title of Project</h3>
                             </div>
@@ -88,39 +120,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="https://via.placeholder.com/500x500" alt="placeholder" />
-                            <div class="caption blue">
-                                <h3>Title of Project</h3>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="https://via.placeholder.com/500x500" alt="placeholder" />
-                            <div class="caption blue">
-                                <h3>Title of Project</h3>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="https://via.placeholder.com/500x500" alt="placeholder" />
-                            <div class="caption blue">
-                                <h3>Title of Project</h3>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="https://via.placeholder.com/500x500" alt="placeholder" />
-                            <div class="caption blue">
-                                <h3>Title of Project</h3>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="https://via.placeholder.com/500x500" alt="placeholder" />
+                            <img src="img/picto/olympicpicto-cover.gif" alt="placeholder" />
                             <div class="caption blue">
                                 <h3>Title of Project</h3>
                             </div>
