--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="site-header toggle-nav sticky">
         <div class="container">
             <div class="site-id">
-                <a href="index.html"><img src="img/kawaiichibi75.gif" alt="logo"></a>
+                <a href="index.html"><img src="img/kawaiikon/kawaii-kon-logo-75x75.gif" alt="logo"></a>
             </div>
             <nav class="site-nav" data-navstate="closed">
                 <h2 class="menu-button">
@@ -30,11 +30,11 @@
                         <rect id="line2" y="10" width="40" height="3"></rect>
                         <rect id="line3" x="10" y="20" width="30" height="3"></rect>
                     </svg>
-                    <span class="hide-visually">Menu</span>
+                    <span class="hide-visually"></span>
                 </h2>
                 <ul class="primary-nav">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
         </div>
@@ -55,8 +55,8 @@
             <div class="container">
                 <ul class="thumbgrid hovercaps">
                     <li>
-                        <a href="#">
-                            <img src="img/stamp/amethyst-front-cover.gif" alt="placeholder" />
+                        <a href="stamp.html">
+                            <img src="img/stamp/crystle-hero-1.gif" alt="placeholder" />
                             <div class="caption blue">
                                 <h3>Stamps</h3>
                             </div>
@@ -88,7 +88,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="img/booktrilogy/trilogybookcover-1600X1600.gif" alt="placeholder" />
+                            <img src="img/booktrilogy/trilogybookcover-horizontal-1600x1600.gif" alt="placeholder" />
                             <div class="caption blue">
                                 <h3>Title of Project</h3>
                             </div>
@@ -104,7 +104,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="img/freshcatch/freshcatchcover-1600x1600.gif" alt="placeholder" />
+                            <img src="img/freshcatch/fresh-catch-logo-water-backgound.gif" alt="placeholder" />
                             <div class="caption blue">
                                 <h3>Title of Project</h3>
                             </div>
