--- a/about.html
+++ b/about.html
@@ -16,25 +16,34 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="">
 
+
+
 </head>
 
 <body>
 
-    <header class="site-header">
-
-
-        <nav class="site-navigation">
-            <ul>
-                <li>
-                    <a href="index.html">Work</a>
-                </li>
-                <li class="selected">
-                    <a href="about.html#about" class="selected">About</a>
-                </li>
-
-            </ul>
-        </nav>
+    <header class="site-header toggle-nav sticky">
+        <div class="container">
+            <div class="site-id">
+                <a href="index.html"><img src="img/kawaiikon/kawaii-kon-logo-75x75.gif" alt="logo"></a>
+            </div>
+            <nav class="site-nav" data-navstate="closed">
+                <h2 class="menu-button">
+                    <svg viewBox="0 0 40 25" width="40" height="25">
+                        <rect id="line1" y="0" width="40" height="3"></rect>
+                        <rect id="line2" y="10" width="40" height="3"></rect>
+                        <rect id="line3" x="10" y="20" width="30" height="3"></rect>
+                    </svg>
+                    <span class="hide-visually"></span>
+                </h2>
+                <ul class="primary-nav">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
+
     <main class="site-main">
         <section class="gradient">
             <h1></h1>
@@ -61,7 +70,7 @@
     </main>
 
     <footer class="site-footer fade-and-move-in">
-        <nav class="site-navigation">
+        <nav class="site-nav">
             <ul>
                 <li>
                     <a href="index.html">Home</a>
