--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
         </section>
 
     </main>
+    
     <footer class="site-footer">
         <nav class="site-nav">
             <ul>
-                <li><a class="scroll" href="#home">home</a></li>
-                <li><a class="scroll" href="#about">about</a></li>
-                <li><a class="scroll" href="#contactinfo">contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
         </nav>
     </footer>
