--- a/stamp.html
+++ b/stamp.html
@@ -19,23 +19,26 @@
 </head>
 
 <body>
-
-    <header class="site-header">
-            <div class="site-branding">
-                <h1>
-                    <a href="index.html"><img src="img/kawaiikon/kawaii-kon-logo-75x75.gif" alt="logo"></a>
-                </h1>
+    <header class="site-header toggle-nav sticky">
+        <div class="container">
+            <div class="site-id">
+                <a href="index.html"><img src="img/kawaiikon/kawaii-kon-logo-75x75.gif" alt="logo"></a>
             </div>
-            <nav class="site-navigation">
-                <ul>
-                    <li class="selected">
-                        <a href="index.html" class="selected">Work</a>
-                    </li>
-                    <li>
-                        <a href="about.html">About</a>
-                    </li>
+            <nav class="site-nav" data-navstate="closed">
+                <h2 class="menu-button">
+                    <svg viewBox="0 0 40 25" width="40" height="25">
+                        <rect id="line1" y="0" width="40" height="3"></rect>
+                        <rect id="line2" y="10" width="40" height="3"></rect>
+                        <rect id="line3" x="10" y="20" width="30" height="3"></rect>
+                    </svg>
+                    <span class="hide-visually"></span>
+                </h2>
+                <ul class="primary-nav">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
+        </div>
     </header>
 
     <main class="site-main">
@@ -50,8 +53,7 @@
             <h3 class="subheader">ART 125-Intro to Graphic Design</h3>
             <div class="row">
                 <div class="two-thirds column">
-                    <p>In this task, I had to collaborate with two of my classmate on creating a stamp. The theme we decided on was crystals. I work on painting the colors of the crystals, scanned them into the computer. The next person made lines and a more defined look through editing and the last person decided to input all the images together and include the best typeface that fits best.
-                    </p>
+                    <p>In this task, I collaborated with two of my classmates on creating a stamp. The theme we decided on were crystals. I work on painting the crystals and scanned them into the computer. The next person made lines and defined the crystals through editing and refining. Lastly, the third person decided to input all the images together and incorporate the best typeface that best fits.
                 </div>
                 <div class="one-third column">
                     <p>
@@ -65,8 +67,6 @@
 
         <section>
             <img src="img/stamp/Stamp1.PNG" alt="placeholder" class="scale-with-grid" />
-            <!-- <img src="" alt="placeholder" class="scale-with-grid" />
-            <img src="" alt="placeholder" class="scale-with-grid" /> -->
         </section>
         
 
@@ -74,7 +74,7 @@
     </main>
 
     <footer class="site-footer">
-            <nav class="site-navigation">
+            <nav class="site-nav">
                 <ul>
                     <li>
                         <a href="index.html">Home</a>
