lula chocolate layout

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="lula.html">
                             <img src="img/MaVenice_LuLa2020/chocolate-box.gif" alt="placeholder" />
                             <div class="caption blue">
                                 <h3>Lulu Chocolate </h3>
