--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="roto.html">
                             <img src="img/roto/rotoofme.jpg" alt="placeholder" />
                             <div class="caption blue">
                                 <h3>Roto</h3>
