imputing more content

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="santorini.html">
                             <img src="img/santorini/santorini.png" alt="placeholder" />
                             <div class="caption blue">
                                 <h3>Santorini</h3>
@@ -87,7 +87,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="booktrilogy.html">
                             <img src="img/booktrilogy/trilogybookcover-horizontal-1600x1600.gif" alt="placeholder" />
                             <div class="caption blue">
                                 <h3>Title of Project</h3>
