editing jeff koons

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="img/brochure/brochure-cover.gif" alt="placeholder" />
+                            <img src="img/brochure/jeffkoons-square-art-back.png" alt="placeholder" />
                             <div class="caption blue">
                                 <h3>Title of Project</h3>
                             </div>
