--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <rect id="line2" y="10" width="40" height="3"></rect>
                         <rect id="line3" x="10" y="20" width="30" height="3"></rect>
                     </svg>
-                    <span class="hide-visually"></span>
+                    <span class="hide-visually">Open Menu</span>
                 </h2>
                 <ul class="primary-nav">
                     <li><a href="index.html">Home</a></li>
