--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="lula.html">
+                        <a href="lulachocolate.html">
                             <img src="img/MaVenice_LuLa2020/chocolate-box.gif" alt="placeholder" />
                             <div class="caption blue">
                                 <h3>Lulu Chocolate </h3>
@@ -103,7 +103,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="freshcatch.html">
                             <img src="img/freshcatch/fresh-catch-logo-water-backgound.gif" alt="placeholder" />
                             <div class="caption blue">
                                 <h3>Title of Project</h3>
