--- a/freshcatch.html
+++ b/freshcatch.html
@@ -43,9 +43,9 @@
     <main class="site-main">
         <div class="container">
             <section class="hero">
-                <img src="img/MaVenice_LuLa2020/lula-hero.gif" alt="placeholder1500x500">
-                <h2>Branding</h2>
-                <p>Chocolate For Females</p>
+                <img src="img/" alt="placeholder1500x500">
+                <h2>Logo Design</h2>
+                <p>Re-designing Fresh Catch</p>
             </section>
         </div>
         <div class="container">
@@ -56,9 +56,8 @@
                         <div class="flex-grid">
                             <div class="col">
                                 <ul>
-                                    <li class="text-left">In this project, we had to create a branding for our choice of product. I created a chocolate brand that focuses on women’s monthly cravings with the help of a chocolate brand I called Lula Chocolate. The first thing
-                                        that had to be done is creating a brand strategy for the brand, its target, purpose, and its audience. Start off with creating the logo, patterns, and mockups of the products and additional prints such as business
-                                        cards and thank you cards.
+                                    <li class="text-left">In this assignment, I re-designed the logo for Fresh Catch. I researched the company's history and focused on a concept of what I want to deliver in regards to the business’ objective, product line, and the company's
+                                        branding expectation.
                                     </li>
                                 </ul>
                             </div>
@@ -84,14 +83,6 @@
                     <div class="one-half column ">
                         <h4>Positioning Statement</h4>
                         <p>Our chocolate bars offer all-natural medicinal relief from the symptoms of menstruation. We feature two unique recipes to satisfy cravings and ease the pain.</p>
-
-                        <h4>Audience</h4>
-                        <p>We appeal to women in their 20’s to late ‘30s. They are young, in control of their bodies, and willing to indulge for satisfaction’s sake. They are not squeamish or embarrassed about their bodies.</p>
-
-                        <h4>Brand Personality</h4>
-                        <p>Lula is warm and comforting. We aim to be the best friend every woman needs—providing understanding and relief. With a hint of sarcasm, you need when nothing is going as you planned. Vent away! We are here to listen!</p>
-
-
                     </div>
                 </div>
 
@@ -120,7 +111,6 @@
                 <div class="row ">
                     <div class="div one-half column ">
                         <img src="img/MaVenice_LuLa2020/packaging-front-1.jpg" alt="placeholderImage ">
-                        <img src="img/MaVenice_LuLa2020/packaging-inside-1.jpg" alt="placeholderImage ">
                     </div>
                     <div class="div one-half column ">
                         <h4>Layout of Packaging</h4>
