--- a/freshcatch.html
+++ b/freshcatch.html
@@ -43,7 +43,7 @@
     <main class="site-main">
         <div class="container">
             <section class="hero">
-                <img src="img/" alt="placeholder1500x500">
+                <img src="img/freshcatch/freshcatchhero.png" alt="placeholder1500x500">
                 <h2>Logo Design</h2>
                 <p>Re-designing Fresh Catch</p>
             </section>
@@ -63,8 +63,8 @@
                             </div>
                             <div class="col">
                                 <ul>
-                                    <li class="text-left"><strong class="text-left">Service:</strong> Graphic Design</li>
-                                    <li class="text-left"><strong class="text-left">Skills:</strong> Sketching, Adobe Photoshop, Adobe Illustrator, Adobe InDesign</li>
+                                    <li class="text-left"><strong class="text-left">Service:</strong>Graphic Symbolism</li>
+                                    <li class="text-left"><strong class="text-left">Skills:</strong> Sketching, Adobe Illustrator, Adobe InDesign</li>
                                 </ul>
                             </div>
                         </div>
@@ -72,51 +72,70 @@
                 </div>
             </section>
         </div>
+
+
         <div class="hr_"></div>
         <section id="challenge">
             <div class="container">
-                <h3 class="sectionhead">Lula Chocolate Logo</h3>
+                <h3 class="sectionhead">Sketches</h3>
                 <div class="row">
                     <div class="one-half column">
-                        <img src="img/MaVenice_LuLa2020/lula-logo-small.jpg" alt="placeholderImage ">
+                        <img src="img/freshcatch/octo sketch.png" alt="placeholderImage ">
                     </div>
                     <div class="one-half column ">
-                        <h4>Positioning Statement</h4>
-                        <p>Our chocolate bars offer all-natural medicinal relief from the symptoms of menstruation. We feature two unique recipes to satisfy cravings and ease the pain.</p>
+                        <h4>Sketch #1</h4>
+                        <p>This sketch idea I which I took part of the original logo with was the whole image of an octopus</p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <div class="hr_"></div>
+        <section id="challenge">
+            <div class="container">
+                <div class="row">
+                    <div class="one-half column">
+                        <img src="img/freshcatch/boat sketch.png" alt="placeholderImage ">
+                    </div>
+                    <div class="one-half column ">
+                        <h4>Sketch #2</h4>
+                        <p>When it come to this boat sketch, I thought of fisherman on their fishing boat, I wanted the image and name of the logo to interact with each other</p>
                     </div>
                 </div>
 
             </div>
         </section>
 
-        <div class="hr_ "></div>
-        <section id="process ">
-            <div class="container ">
-                <h3 class="sectionhead ">Process &amp; Insight</h3>
-                <div class="row swap ">
-                    <div class="one-half column ">
-                        <img src="img/MaVenice_LuLa2020/typography-and-color.jpg" alt="placeholderImage ">
+        <div class="hr_"></div>
+        <section id="challenge">
+            <div class="container">
+                <div class="row">
+                    <div class="one-half column">
+                        <img src="img/freshcatch/sketch of man.png" alt="placeholderImage ">
                     </div>
-                    <div class="div one-half column ">
-                        <h4>Typography | Color Scheme</h4>
-                        <p></p>
+                    <div class="one-half column ">
+                        <h4>Sketch #3</h4>
+                        <p>This sketch idea comes with the brothers history of waking up early to get fresh seafood and going spearfishing</p>
                     </div>
                 </div>
+
             </div>
         </section>
-        <div class="hr_ "></div>
-        <section id="solution ">
-            <div class="container ">
-                <!-- <h3 class="sectionhead ">solution</h3> -->
-                <div class="row ">
-                    <div class="div one-half column ">
-                        <img src="img/MaVenice_LuLa2020/packaging-front-1.jpg" alt="placeholderImage ">
+
+        <div class="hr_"></div>
+        <section id="challenge">
+            <div class="container">
+                <h3 class="sectionhead">Into Adobe Illustration</h3>
+                <div class="row">
+                    <div class="one-half column">
+                        <img src="img/freshcatch/octo.png" alt="placeholderImage ">
                     </div>
-                    <div class="div one-half column ">
-                        <h4>Layout of Packaging</h4>
-                        <p></p>
+                    <div class="one-half column ">
+                        <h4>Octopus</h4>
+                        <p>This logo seems like it was a place that sales sushi rolls and the image turn out to look like one which did not seem to represent what the businese expectation</p>
                     </div>
                 </div>
+
             </div>
         </section>
 
@@ -126,31 +145,32 @@
                 <!-- <h3 class="sectionhead ">Process &amp; Insight</h3> -->
                 <div class="row swap ">
                     <div class="one-half column ">
-                        <img src="img/MaVenice_LuLa2020/thank-you-card-and-choco-pills.jpg" alt="placeholderImage ">
+                        <img src="img/freshcatch/boat.png" alt="placeholderImage ">
                     </div>
                     <div class="div one-half column ">
-                        <h4>Thank You Card | Chocolate Pills</h4>
-                        <p></p>
+                        <h4>Boat</h4>
+                        <p>This logo was my second favorite because the logo and the typeface are interacting with each other.</p>
                     </div>
                 </div>
             </div>
         </section>
-
         <div class="hr_ "></div>
         <section id="solution ">
             <div class="container ">
                 <!-- <h3 class="sectionhead ">solution</h3> -->
                 <div class="row ">
                     <div class="div one-half column ">
-                        <img src="img/MaVenice_LuLa2020/lula-final-box.jpg" alt="placeholderImage ">
+                        <img src="img/freshcatch/freshcatch man.png" alt="placeholderImage ">
                     </div>
                     <div class="div one-half column ">
-                        <h4>Final Chocolate Box Mockup</h4>
-                        <p></p>
+                        <h4>Final Logo </h4>
+                        <p>This is the final logo that everyone in class had voted for, something about the brothers history and being able to catch your own fish seems so fresh.</p>
                     </div>
                 </div>
             </div>
         </section>
+
+
 
     </main>
 
