--- a/freshcatch.html
+++ b/freshcatch.html
@@ -30,7 +30,7 @@
                         <rect id="line2" y="10" width="40" height="3"></rect>
                         <rect id="line3" x="10" y="20" width="30" height="3"></rect>
                     </svg>
-                    <span class="hide-visually"></span>
+                    <span class="hide-visually">Open Menu</span>
                 </h2>
                 <ul class="primary-nav">
                     <li><a href="index.html">Home</a></li>
@@ -79,46 +79,8 @@
             <div class="container">
                 <h3 class="sectionhead">Sketches</h3>
                 <div class="row">
-                    <div class="one-half column">
-                        <img src="img/freshcatch/octo sketch.png" alt="placeholderImage ">
-                    </div>
-                    <div class="one-half column ">
-                        <h4>Sketch #1</h4>
-                        <p>This sketch idea I which I took part of the original logo with was the whole image of an octopus</p>
-                    </div>
+                    <img src="img/freshcatch/sketchallthree.jpg" alt="placeholderImage" class="scale-with-grid" />
                 </div>
-
-            </div>
-        </section>
-        <div class="hr_"></div>
-        <section id="challenge">
-            <div class="container">
-                <div class="row">
-                    <div class="one-half column">
-                        <img src="img/freshcatch/boat sketch.png" alt="placeholderImage ">
-                    </div>
-                    <div class="one-half column ">
-                        <h4>Sketch #2</h4>
-                        <p>When it come to this boat sketch, I thought of fisherman on their fishing boat, I wanted the image and name of the logo to interact with each other</p>
-                    </div>
-                </div>
-
-            </div>
-        </section>
-
-        <div class="hr_"></div>
-        <section id="challenge">
-            <div class="container">
-                <div class="row">
-                    <div class="one-half column">
-                        <img src="img/freshcatch/sketch of man.png" alt="placeholderImage ">
-                    </div>
-                    <div class="one-half column ">
-                        <h4>Sketch #3</h4>
-                        <p>This sketch idea comes with the brothers history of waking up early to get fresh seafood and going spearfishing</p>
-                    </div>
-                </div>
-
             </div>
         </section>
 
@@ -132,7 +94,7 @@
                     </div>
                     <div class="one-half column ">
                         <h4>Octopus</h4>
-                        <p>This logo seems like it was a place that sales sushi rolls and the image turn out to look like one which did not seem to represent what the businese expectation</p>
+                        <p>I took part of the original logo with was the whole image of an octopusThis logo seems like it was a place that sales sushi rolls and the image turn out to look like one which did not seem to represent what the businese expectation</p>
                     </div>
                 </div>
 
