--- a/kawaiikon.html
+++ b/kawaiikon.html
@@ -43,9 +43,9 @@
     <main class="site-main">
         <div class="container">
             <section class="hero">
-                <img src="img/santorini/santoriniHero.gif" alt="placeholder1500x500">
-                <h2></h2>
-                <p>Logo Design</p>
+                <img src="img/brochure/herobrochure.gif" alt="placeholder1500x500">
+                <h2>Re-Branding</h2>
+                <p>Kawaii Kon Re-Branding</p>
             </section>
         </div>
         <div class="container">
@@ -56,16 +56,15 @@
                         <div class="flex-grid">
                             <div class="col">
                                 <ul>
-                                    <li class="text-left">For this project, my tasked is to create a logo for a city of my choice but end up with an island that I will one day visit, Santorini. The island is known for its view and stunning sunset and unique architecture. I
-                                        created the logo that represents the three bells of Fira that is located on top of the Greek Catholic Church, which is known for its rounded bright blue roof and white bright walls.
-
+                                    <li class="text-left">In this project, we had the freedom to choose a subject or real-life exhibition to design and create a Museum Brochure. I come down in favor of Jeff Koons’s artwork and created a tri-fold brochure. By gathering images,
+                                        copywriting, choosing the right typography, and the style of the brochure I was able to create a design that fits the artist’s work.
                                     </li>
                                 </ul>
                             </div>
                             <div class="col">
                                 <ul>
-                                    <li class="text-left"><strong class="text-left">Service:</strong>Logo Design</li>
-                                    <li class="text-left"><strong class="text-left">Skills:</strong>Sketching, Adobe Illustrator</li>
+                                    <li class="text-left"><strong class="text-left">Service:</strong>Typesetting, Print Design </li>
+                                    <li class="text-left"><strong class="text-left">Skills:</strong>Adobe InDesign</li>
                                 </ul>
                             </div>
                         </div>
@@ -77,26 +76,17 @@
         <div class="hr_"></div>
         <section id="challenge">
             <div class="container">
-                <h3 class="sectionhead">Sketches</h3>
-                <div class="row">
-                    <img src="img/santorini/santorini-sketches.jpg" alt="placeholderImage" class="scale-with-grid" />
-                </div>
-            </div>
-        </section>
-
-        <div class="hr_"></div>
-        <section id="challenge">
-            <div class="container">
                 <h3 class="sectionhead">Into Adobe Illustration</h3>
                 <div class="row">
                     <div class="one-half column">
-                        <img src="img/santorini/black.jpg" alt="placeholderImage ">
+                        <img src="img/brochure/jeff-front-cover.jpg" alt="placeholderImage ">
                     </div>
                     <div class="one-half column ">
                         <h4>Cover</h4>
                         <p>This logo seems like it was a place that sales sushi rolls and the image turn out to look like one which did not seem to represent what the businese expectation</p>
                     </div>
                 </div>
+
             </div>
         </section>
 
@@ -106,7 +96,7 @@
                 <!-- <h3 class="sectionhead ">Process &amp; Insight</h3> -->
                 <div class="row swap ">
                     <div class="one-half column ">
-                        <img src="img/santorini/white.jpg" alt="placeholderImage ">
+                        <img src="img/brochure/brochure-first-page-to-open.jpg" alt="placeholderImage ">
                     </div>
                     <div class="div one-half column ">
                         <h4>First Page</h4>
@@ -115,18 +105,38 @@
                 </div>
             </div>
         </section>
+        <div class="hr_ "></div>
+        <section id="solution ">
+            <div class="container ">
+                <!-- <h3 class="sectionhead ">solution</h3> -->
+                <div class="row ">
+                    <div class="div one-half column ">
+                        <img src="img/brochure/connectionwithoutline.jpg" alt="placeholderImage ">
+                    </div>
+                    <div class="div one-half column ">
+                        <h4>Connection</h4>
+                        <p>I wanted two of Jeff Koons artwork to collaborate with each other from the front cover to the back cover.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <div class="hr_"></div>
+        <section id="challenge">
+            <div class="container">
+                <h3 class="sectionhead">Full Layout</h3>
+                <div class="row">
+                    <img src="img/brochure/outsidebrochure.jpg" alt="placeholderImage" class="scale-with-grid" />
+                </div>
+            </div>
+        </section>
 
         <div class="hr_"></div>
         <section id="challenge">
             <div class="container">
                 <div class="row">
-                    <div class="one-half column">
-                        <img src="img/santorini/blue.jpg" alt="placeholderImage ">
-                    </div>
-                    <div class="one-half column ">
-                        <h4>Cover</h4>
-                        <p>This logo seems like it was a place that sales sushi rolls and the image turn out to look like one which did not seem to represent what the businese expectation</p>
-                    </div>
+                    <img src="img/brochure/insidebrochure.jpg" alt="placeholderImage" class="scale-with-grid" />
                 </div>
             </div>
         </section>
