--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Site Base | Site Name</title>
+    <title>Ma Venice Bagolor | Porfolio </title>
     <meta name="description" content="This is a Starter HTML, CSS, and JS Boilerplate/Framework." />
 
     <!-- FOR SMALL SCREEN -->
@@ -90,15 +90,23 @@
                         <a href="booktrilogy.html">
                             <img src="img/booktrilogy/trilogybookcover-horizontal-1600x1600.gif" alt="placeholder" />
                             <div class="caption blue">
-                                <h3>Title of Project</h3>
+                                <h3>Book Trilogy</h3>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="brochure.html">
                             <img src="img/brochure/jeffkoons-square-art-back.png" alt="placeholder" />
                             <div class="caption blue">
-                                <h3>Title of Project</h3>
+                                <h3>Brochure</h3>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="kawaiikon.html">
+                            <img src="img/kawaiikon/logo_kawaiikon (2).jpg" alt="placeholder" />
+                            <div class="caption blue">
+                                <h3>Kawaii Kon</h3>
                             </div>
                         </a>
                     </li>
@@ -106,23 +114,15 @@
                         <a href="freshcatch.html">
                             <img src="img/freshcatch/fresh-catch-logo-water-backgound.gif" alt="placeholder" />
                             <div class="caption blue">
-                                <h3>Title of Project</h3>
+                                <h3>Fresh Catch</h3>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <img src="img/kawaiikon/kawaiikoncover-gif.gif" alt="placeholder" />
+                        <a href="picto.html">
+                            <img src="img/picto/index-cover (2).jpg" alt="placeholder" />
                             <div class="caption blue">
-                                <h3>Title of Project</h3>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="img/picto/olympicpicto-cover.gif" alt="placeholder" />
-                            <div class="caption blue">
-                                <h3>Title of Project</h3>
+                                <h3>Olympic Pictograph </h3>
                             </div>
                         </a>
                     </li>
