--- a/lulachocolate.html
+++ b/lulachocolate.html
@@ -30,7 +30,7 @@
                         <rect id="line2" y="10" width="40" height="3"></rect>
                         <rect id="line3" x="10" y="20" width="30" height="3"></rect>
                     </svg>
-                    <span class="hide-visually"></span>
+                    <span class="hide-visually">Open Menu</span>
                 </h2>
                 <ul class="primary-nav">
                     <li><a href="index.html">Home</a></li>
@@ -152,10 +152,26 @@
                 <!-- <h3 class="sectionhead ">solution</h3> -->
                 <div class="row ">
                     <div class="div one-half column ">
+                        <img src="img/MaVenice_LuLa2020/businesscard-800x520.jpg" alt="placeholderImage ">
+                    </div>
+                    <div class="div one-half column ">
+                        <h4>Business Card</h4>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <div class="hr_ "></div>
+        <section id="process ">
+            <div class="container ">
+                <!-- <h3 class="sectionhead ">Process &amp; Insight</h3> -->
+                <div class="row swap ">
+                    <div class="one-half column ">
                         <img src="img/MaVenice_LuLa2020/lula-final-box.jpg" alt="placeholderImage ">
                     </div>
                     <div class="div one-half column ">
-                        <h4>Final Chocolate Box Mockup</h4>
+                        <h4>Final Product</h4>
                         <p></p>
                     </div>
                 </div>
