--- a/picto.html
+++ b/picto.html
@@ -43,9 +43,9 @@
     <main class="site-main">
         <div class="container">
             <section class="hero">
-                <img src="img/santorini/santoriniHero.gif" alt="placeholder1500x500">
-                <h2></h2>
-                <p>Logo Design</p>
+                <img src="img/picto/black-pictos-small.jpg" alt="placeholder1500x500">
+                <h2>Olympic Pictograph Logo</h2>
+                <p>Creating Olympic Summer Pictograph</p>
             </section>
         </div>
         <div class="container">
@@ -56,16 +56,14 @@
                         <div class="flex-grid">
                             <div class="col">
                                 <ul>
-                                    <li class="text-left">For this project, my tasked is to create a logo for a city of my choice but end up with an island that I will one day visit, Santorini. The island is known for its view and stunning sunset and unique architecture. I
-                                        created the logo that represents the three bells of Fira that is located on top of the Greek Catholic Church, which is known for its rounded bright blue roof and white bright walls.
-
+                                    <li class="text-left">For this project, we were assigned to choose from winter Olympics or summer. I chose the summer Olympics which were padding, soccer, running, and weight lifting.
                                     </li>
                                 </ul>
                             </div>
                             <div class="col">
                                 <ul>
-                                    <li class="text-left"><strong class="text-left">Service:</strong>Logo Design</li>
-                                    <li class="text-left"><strong class="text-left">Skills:</strong>Sketching, Adobe Illustrator</li>
+                                    <li class="text-left"><strong class="text-left">Service:</strong>Graphic Design  </li>
+                                    <li class="text-left"><strong class="text-left">Skills:</strong>Sketching, Adobe Photoshop, Adobe Illustrator</li>
                                 </ul>
                             </div>
                         </div>
@@ -79,10 +77,11 @@
             <div class="container">
                 <h3 class="sectionhead">Sketches</h3>
                 <div class="row">
-                    <img src="img/santorini/santorini-sketches.jpg" alt="placeholderImage" class="scale-with-grid" />
+                    <img src="img/picto/OlympicPictorgramsSketch.gif" alt="placeholderImage" class="scale-with-grid" />
                 </div>
             </div>
         </section>
+
 
         <div class="hr_"></div>
         <section id="challenge">
@@ -90,13 +89,14 @@
                 <h3 class="sectionhead">Into Adobe Illustration</h3>
                 <div class="row">
                     <div class="one-half column">
-                        <img src="img/santorini/black.jpg" alt="placeholderImage ">
+                        <img src="img/picto/black-pictos.jpg" alt="placeholderImage ">
                     </div>
                     <div class="one-half column ">
                         <h4>Cover</h4>
                         <p>This logo seems like it was a place that sales sushi rolls and the image turn out to look like one which did not seem to represent what the businese expectation</p>
                     </div>
                 </div>
+
             </div>
         </section>
 
@@ -106,26 +106,11 @@
                 <!-- <h3 class="sectionhead ">Process &amp; Insight</h3> -->
                 <div class="row swap ">
                     <div class="one-half column ">
-                        <img src="img/santorini/white.jpg" alt="placeholderImage ">
+                        <img src="img/picto/white-picto.jpg" alt="placeholderImage ">
                     </div>
                     <div class="div one-half column ">
                         <h4>First Page</h4>
                         <p>When opened, Jeff Koons three artwork band together with his own personal quote.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <div class="hr_"></div>
-        <section id="challenge">
-            <div class="container">
-                <div class="row">
-                    <div class="one-half column">
-                        <img src="img/santorini/blue.jpg" alt="placeholderImage ">
-                    </div>
-                    <div class="one-half column ">
-                        <h4>Cover</h4>
-                        <p>This logo seems like it was a place that sales sushi rolls and the image turn out to look like one which did not seem to represent what the businese expectation</p>
                     </div>
                 </div>
             </div>
