--- a/freshcatch.html
+++ b/freshcatch.html
@@ -50,7 +50,7 @@
         </div>
         <div class="container">
             <section class="meta-data">
-                <h1>about this project</h1>
+                <h1>About This Project</h1>
                 <div class="meta">
                     <div class="row">
                         <div class="flex-grid">
@@ -126,7 +126,7 @@
                     </div>
                     <div class="div one-half column ">
                         <h4>Final Logo </h4>
-                        <p>This is the final logo that everyone in class had voted for, something about the brothers history and being able to catch your own fish seems so fresh.</p>
+                        <p>This is the final logo that everyone in class had voted for, this logo connects to the owner of their small business and their history of spear fishing something about catching your own fish seems so fresh.</p>
                     </div>
                 </div>
             </div>
