--- a/about.html
+++ b/about.html
@@ -53,8 +53,8 @@
             <div class="container">
                 <img src="img/roto/rotoofme.jpg" alt="rotor" width="1000" height="1000" />
                 <h1>Ma Venice Bagolor</h1>
-                <p>I am a New Media Art student who is interested in learning more about design, such as logo-design, typography, branding, and more. My strength is mostly hands on artwork such as sketching and drawing but willing to strenthen my skills
-                    in transitioning to the digital world.I do enjoy learning new skill and improving myself. </p>
+                <p>I am a New Media Art student who is interested in learning more about design, such as logo-design, typography, branding, and more. My strength is mostly hands on artwork such as sketching and drawing but willing to strengthen my skills
+                    in transitioning to the digital world. I do enjoy learning new skill and improving myself.</p>
 
 
 
