--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         transform="translate(-14.92 -29.78)" />
                 </svg>
                 <h1>Ma Venice Bagolor </h1>
-                <h3>Designer</h3>
+                <h3>Print | Graphic Designer</h3>
             </div>
         </section>
         <section id="work" class="text-centered">
